src/base/resources/tailwind.css
/* ... */
.peer:-ms-input-placeholder:valid ~ .peer-placeholder-shown\:peer-valid\:outline-0 {
  outline-width: 0px;
}

.peer:placeholder-shown:valid ~ .peer-placeholder-shown\:peer-valid\:outline-0 {
  outline-width: 0px;
}

.peer:-moz-placeholder-shown:valid ~ .peer-placeholder-shown\:peer-valid\:outline-transparent {
  outline-color: transparent;
}

.peer:-ms-input-placeholder:valid ~ .peer-placeholder-shown\:peer-valid\:outline-transparent {
  outline-color: transparent;
}

.peer:placeholder-shown:valid ~ .peer-placeholder-shown\:peer-valid\:outline-transparent {
  outline-color: transparent;
}

.peer:invalid ~ .peer-invalid\:cursor-not-allowed {
  cursor: not-allowed;
}

.peer:invalid ~ .peer-invalid\:outline-2 {
  outline-width: 2px;
}

.peer:invalid ~ .peer-invalid\:outline-red-800 {
  outline-color: #991b1b;
}

.peer:invalid ~ .peer-invalid\:hover\:bg-neutral-300:hover {
  --tw-bg-opacity: 1;
  background-color: rgb(212 212 212 / var(--tw-bg-opacity));
}

.peer:-moz-placeholder-shown:invalid ~ .peer-placeholder-shown\:peer-invalid\:focus\:outline-2:focus {
  outline-width: 2px;
}

.peer:-ms-input-placeholder:invalid ~ .peer-placeholder-shown\:peer-invalid\:focus\:outline-2:focus {
  outline-width: 2px;
}

.peer:placeholder-shown:invalid ~ .peer-placeholder-shown\:peer-invalid\:focus\:outline-2:focus {
  outline-width: 2px;
}

.peer:-moz-placeholder-shown:invalid ~ .peer-placeholder-shown\:peer-invalid\:focus\:outline-transparent:focus {
  outline-color: transparent;
}

.peer:-ms-input-placeholder:invalid ~ .peer-placeholder-shown\:peer-invalid\:focus\:outline-transparent:focus {
  outline-color: transparent;
}

.peer:placeholder-shown:invalid ~ .peer-placeholder-shown\:peer-invalid\:focus\:outline-transparent:focus {
  outline-color: transparent;
}

.peer:empty ~ .peer-empty\:flex {
  display: flex;
}

.peer:hover ~ .peer-hover\:translate-x-0 {
  --tw-translate-x: 0px;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.peer:hover ~ .peer-hover\:translate-y-10 {
  --tw-translate-y: 2.5rem;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.peer:hover ~ .peer-hover\:scale-100 {
  --tw-scale-x: 1;
  --tw-scale-y: 1;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.peer:hover ~ .peer-hover\:opacity-100 {
  opacity: 1;
}

.peer:hover ~ .peer-hover\:delay-300 {
  transition-delay: 300ms;
}

.peer:hover ~ .peer-hover\:duration-150 {
  transition-duration: 150ms;
}

@media (prefers-color-scheme: dark) {
  .dark\:border-neutral-800 {
    --tw-border-opacity: 1;
    border-color: rgb(38 38 38 / var(--tw-border-opacity));
  }

  .dark\:border-t-white {
    --tw-border-opacity: 1;
    border-top-color: rgb(255 255 255 / var(--tw-border-opacity));
  }

  .dark\:bg-neutral-900 {
    --tw-bg-opacity: 1;
    background-color: rgb(23 23 23 / var(--tw-bg-opacity));
  }

  .dark\:bg-neutral-800 {
    --tw-bg-opacity: 1;
    background-color: rgb(38 38 38 / var(--tw-bg-opacity));
  }

  .dark\:bg-neutral-700 {
    --tw-bg-opacity: 1;
    background-color: rgb(64 64 64 / var(--tw-bg-opacity));
  }

  .dark\:fill-neutral-500 {
    fill: #737373;
  }

  .dark\:fill-neutral-400 {
    fill: #a3a3a3;
  }

  .dark\:text-white {
    --tw-text-opacity: 1;
    color: rgb(255 255 255 / var(--tw-text-opacity));
  }

  .dark\:text-neutral-400 {
    --tw-text-opacity: 1;
    color: rgb(163 163 163 / var(--tw-text-opacity));
  }

  .dark\:placeholder\:text-neutral-400::-moz-placeholder {
    --tw-text-opacity: 1;
    color: rgb(163 163 163 / var(--tw-text-opacity));
  }

  .dark\:placeholder\:text-neutral-400:-ms-input-placeholder {
    --tw-text-opacity: 1;
    color: rgb(163 163 163 / var(--tw-text-opacity));
  }

  .dark\:placeholder\:text-neutral-400::placeholder {
    --tw-text-opacity: 1;
    color: rgb(163 163 163 / var(--tw-text-opacity));
  }

  .hover\:dark\:bg-neutral-700:hover {
    --tw-bg-opacity: 1;
    background-color: rgb(64 64 64 / var(--tw-bg-opacity));
  }

  .disabled\:hover\:dark\:bg-neutral-800:hover:disabled {
    --tw-bg-opacity: 1;
    background-color: rgb(38 38 38 / var(--tw-bg-opacity));
  }

  .group:hover .group-hover\:dark\:fill-white {
    fill: #fff;
  }

  .group:disabled .dark\:group-disabled\:fill-white {
    fill: #fff;
  }

  .group:hover:disabled .dark\:group-hover\:group-disabled\:fill-white {
    fill: #fff;
  }

  .peer:-moz-placeholder-shown ~ .peer-placeholder-shown\:hover\:dark\:bg-neutral-800:hover {
    --tw-bg-opacity: 1;
    background-color: rgb(38 38 38 / var(--tw-bg-opacity));
  }

  .peer:-ms-input-placeholder ~ .peer-placeholder-shown\:hover\:dark\:bg-neutral-800:hover {
    --tw-bg-opacity: 1;
    background-color: rgb(38 38 38 / var(--tw-bg-opacity));
  }

  .peer:placeholder-shown ~ .peer-placeholder-shown\:hover\:dark\:bg-neutral-800:hover {
    --tw-bg-opacity: 1;
    background-color: rgb(38 38 38 / var(--tw-bg-opacity));
  }

  .peer:invalid ~ .peer-invalid\:hover\:dark\:bg-neutral-800:hover {
    --tw-bg-opacity: 1;
    background-color: rgb(38 38 38 / var(--tw-bg-opacity));
  }
}

